--- a/Torrent Scrapper Web/Torrent Scrapper Web.csproj
+++ b/Torrent Scrapper Web/Torrent Scrapper Web.csproj
@@ -13,4 +13,12 @@
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Torrent Scaper\TorrentScaperUtil.csproj" />
+  </ItemGroup>
+
 </Project>
