--- a/Torrent Scrapper Web/Torrent Scrapper Web.csproj
+++ b/Torrent Scrapper Web/Torrent Scrapper Web.csproj
@@ -1,24 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Torrent_Scrapper_Web</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.2" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Torrent Scaper\TorrentScaperUtil.csproj" />
   </ItemGroup>
-
 </Project>
